31.Internal: slight improvement to db connection management that should improve memory use.
32.MUDSTATE variable in coffeemud.ini file has changed.  Please update your ini files!
33.CLASSSYSTEM has been expanded with another apprentice-based set of choices.
34.New command: MPRUN -- for Archons to run Scriptable scripts, and for use in automated testing.
35.Help on classes and races give much of same details as found on web now.
36.Channel HELP entries are automatically generated.
37.CoffeeMud's bugs were all cured, at public expense.
# Build 5.6.1 Release 4/22/2010 * Bug Fix build only
# Build 5.6.2 Release 4/25/2010 * Bug Fix build only
# Build 5.6.3 Release ?/?/2010
 1.Can now enter I3 RESTART or IMC2 RESTART to reconnect to the intermuds
 2.Language: Undercommon
 3.Property/skill: TemporaryAffects (for timer-dependent behaviors/properties)
 4.Property: Prop_LanguageSpeaker
 5.INI entry: WIZLISTMASK -- WIZLIST command modified to support it.
 6.MUDGrinder Map editor now has a Scripts editor button on the map screen.
 7.Internal: Lots of refactoring done. Lots.
 8.INI entries: OBJSPERTHREAD, TICKTIME, MILLISPERMUDHOUR -- control time and thread spawning!
 9.Web & SMTP server INI files have some tweeking options for performance (MAXTHREADS/REQUESTTIMEOUTMINS)
10.Scriptable Command: MPPOSSESS
11.MERGE command can now be used to merge different database instances of areas/rooms/etc..
12.Ability INI entries: MAXCOMMONSKILLS, MAXCRAFTINGSKILLS, MAXNONCRAFTINGSKILLS, MAXLANGUAGES
13.Added an all-skills configuration file: /resources/skills/allqualifylist
14.IP service (CM1Server) -- a new, more formal-syntax mud interface -- see guides/CM1ServerGuide.html
15.DISABLE flag: LOGOUTS (keeps characters in game world even if they log out)
16.Another playable race: Duergar
17.Apprentice can now play only level 1 -- we had too many people playing all the way to 5 and regretting it.
18.IMPORT now supports areatype parameter for converting to different types.